# CmdHub

./: AGENTS.md  Cargo.toml  PLAN.md  README.md  config.toml
.snow/: permissions.json
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: instance.rs  lib.rs  models.rs  template.rs
core/src/config/: mod.rs
core/src/pty/: mod.rs
core/src/session/: mod.rs
desktop/: Cargo.toml
docs/: stage-1-core-prototype.md  stage-2-web-platform.md  stage-3-desktop-enhancement.md  stage-4-perfection-release.md
server/: Cargo.toml
server/src/: main.rs
tasks/: echo-with-inputs.toml
