[workspace]
members = [
    "core",
    "cli",
    "server",
    "desktop",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
portable-pty = "0.8"
ratatui = "0.26"
crossterm = "0.27"
strip-ansi-escapes = "0.2"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
futures = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
