[package]
name = "cmdhub-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
portable-pty.workspace = true
uuid.workspace = true
