[package]
name = "cmdhub-server"
version = "0.1.0"
edition = "2021"

[dependencies]
cmdhub-core = { path = "../core" }
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
